# module_18_documentation/materials/rest_app_example/app/routes_spec_inside_code.py
@@ -39,7 +39,7 @@ class BookList(Resource):
           - books
         responses:
           200:
-            description: Books data
+            description: Book data
             schema:
               type: array
               items:
